--- a/animation.html
+++ b/animation.html
@@ -1,1 +1,185 @@
+<!doctype html>
+<html lang="fr">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>La Renaissance — Chargement</title>
+  <style>
+    /* Reset minimal */
+    *{box-sizing:border-box;margin:0;padding:0}
+    html,body{height:100%}
+    body{font-family:Inter,Segoe UI,system-ui,Arial;color:#e6eef6;background:#071126;overflow:hidden}
+
+    /* Preloader full screen */
+    #preloader {
+      position:fixed;inset:0;display:flex;align-items:center;justify-content:center;flex-direction:column;
+      background:linear-gradient(180deg,#071126 0%, #0b1830 100%);z-index:1000;
+      transition:opacity .6s ease, visibility .6s ease;
+    }
+    #preloader.hidden{opacity:0;visibility:hidden;pointer-events:none}
+
+    /* Center card */
+    .card {
+      display:flex;flex-direction:column;align-items:center;gap:18px;
+      background:rgba(255,255,255,0.03);
+      border:1px solid rgba(255,255,255,0.04);
+      padding:28px;border-radius:14px;backdrop-filter: blur(6px);
+      box-shadow: 0 10px 40px rgba(4,10,20,0.6);
+    }
+
+    /* Logo circle */
+    .logo {
+    
+      width:86px;height:86px;border-radius:16px;
+      background:linear-gradient(135deg,#7ad3a5,#4fb6e1);
+      display:flex;align-items:center;justify-content:center;font-weight:800;color:#042118;font-size:26px;
+      transform-origin:center;
+      animation: logoPop 1.2s cubic-bezier(.2,.9,.3,1) infinite alternate;
+    }
+    @keyframes logoPop {
+      from { transform: translateY(0) scale(1); box-shadow: 0 6px 24px rgba(79,182,225,0.12); }
+      to   { transform: translateY(-6px) scale(1.06); box-shadow: 0 18px 44px rgba(122,211,165,0.16); }
+    }
+
+    /* Title */
+    .title {font-size:18px;font-weight:700;color:#e6eef6;letter-spacing:.2px}
+    .subtitle {font-size:13px;color:#9aa4b2}
+
+    /* Particles ring */
+    .ring {
+      position:relative;width:160px;height:160px;border-radius:50%;
+      pointer-events:none;
+    }
+    .dot {
+      position:absolute;width:8px;height:8px;border-radius:50%;
+      background:linear-gradient(180deg,#fff,#dff6ee);opacity:.9;
+      top:50%;left:50%;transform-origin:-60px 0;
+      animation: spin 1.6s linear infinite;
+    }
+    .dot.d2{transform-origin:-75px 0; animation-duration:2.2s; width:6px;height:6px;opacity:.6}
+    .dot.d3{transform-origin:-92px 0; animation-duration:2.9s; width:5px;height:5px; opacity:.45}
+    .dot.d4{transform-origin:-110px 0; animation-duration:3.6s; width:4px;height:4px; opacity:.35}
+    @keyframes spin { from{transform:rotate(0deg) translateX(-60px)} to{transform:rotate(360deg) translateX(-60px)} }
+
+    /* Progress bar */
+    .progress {
+      width:280px;height:8px;border-radius:999px;background:rgba(255,255,255,0.04);overflow:hidden;
+      border:1px solid rgba(255,255,255,0.03)
+    }
+    .progress > i {
+      display:block;height:100%;width:0%;border-radius:999px;
+      background:linear-gradient(90deg,#7ad3a5,#4fb6e1);
+      box-shadow:0 6px 20px rgba(79,182,225,0.14);
+      transition:width .2s linear;
+    }
+    .op{
+        color: orangered;
+        font-size: 2.5em;
+        transform: rotate3d(20px);
+        font-family: sans-serif;
+       
+    }
+    .pi{
+        font-size: 1.5em;
+        color: orangered;
+    }
+
+    /* Small note */
+    .note {font-size:1.2em;color:#f9fbfd;margin-top:6px }
+
+    /* Main app (hidden until preloader disappears) */
+    #app {opacity:0;visibility:hidden;transition:opacity .6s ease, visibility .6s ease}
+    #app.visible{opacity:1;visibility:visible}
+
+    /* Responsive */
+    @media (max-width:420px){
+      .card{padding:18px}
+      .progress{width:220px}
+    }
+  </style>
+</head>
+<body>
+  <!-- PRELOADER -->
+  <div id="preloader" role="status" aria-live="polite">
+    <div class="card" aria-hidden="false">
+      <div class="logo" aria-hidden="true"><b class="op">R</b></div>
+
+      <div class="ring" aria-hidden="true" title="animation">
+        <div class="dot" style="transform: rotate(0deg) translateX(-60px)"></div>
+        <div class="dot d2" style="transform: rotate(90deg) translateX(-75px)"></div>
+        <div class="dot d3" style="transform: rotate(180deg) translateX(-92px)"></div>
+        <div class="dot d4" style="transform: rotate(270deg) translateX(-110px)"></div>
+      </div>
+
+      <div class="title">La Renaissance</div>
+      <div class="subtitle">Chargement — bienvenue <b class="pi">!</b></div>
+
+      <div class="progress" aria-hidden="true" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0">
+        <i id="bar"></i>
+      </div>
+
+      <div class="note">Préparation du site…</div>
+    </div>
+  </div>
+
+  <!-- CONTENU PRINCIPAL (exemple minimal) -->
+  <div id="app" role="main" aria-hidden="true">
+    <header style="padding:20px 28px;background:linear-gradient(180deg,#071126,#081229);border-bottom:1px solid rgba(255,255,255,0.03)">
+   
+    </main>
+  </div>
+
+  <script>
+    (function(){
+      // Durée du preloader en millisecondes (modifie ici si besoin)
+      const PRELOAD_TIME_MS = 3500; // 3.5 secondes
+
+      // URL cible après l'animation — modifie ici selon ta page finale
+      const TARGET_URL = 'index.html'; // ex: '/index.html' ou 'https://tonsite.com'
+
+      const pre = document.getElementById('preloader');
+      const app = document.getElementById('app');
+      const bar = document.getElementById('bar');
+
+      // animation de progression artificielle (smooth)
+      const start = performance.now();
+      const duration = PRELOAD_TIME_MS;
+      function tick(now){
+        const t = Math.min(1, (now - start) / duration);
+        // easeOutCubic
+        const eased = 1 - Math.pow(1 - t, 3);
+        bar.style.width = Math.round(eased * 100) + '%';
+        bar.parentElement.setAttribute('aria-valuenow', Math.round(eased*100));
+        if(t < 1) requestAnimationFrame(tick);
+        else finishAndRedirect();
+      }
+      requestAnimationFrame(tick);
+
+      // function to hide preloader and then redirect to TARGET_URL
+      function finishAndRedirect(){
+        // petit fondu visuel
+        pre.classList.add('hidden');
+        pre.setAttribute('aria-hidden','true');
+        // reveal app briefly (optionnel)
+        app.classList.add('visible');
+        app.setAttribute('aria-hidden','false');
+        document.body.style.overflow = '';
+
+        // attendre la transition CSS (.6s) puis rediriger
+        setTimeout(() => {
+          // redirige vers la page finale
+          window.location.href = TARGET_URL;
+        }, 650);
+      }
+
+      // Safety: also force-hide after max 6s in case of issues (and redirect)
+      setTimeout(() => {
+        if (!pre.classList.contains('hidden')) {
+          finishAndRedirect();
+        }
+      }, Math.max(PRELOAD_TIME_MS, 6000));
+    })();
+  </script>
+</body>
+</html>
 
